wrote css for website and changed html

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SpongeBob SquarePants</title>
 	<link rel="icon" href="img/spongebob-face.jpeg">
+	<style>	@import url('https://fonts.cdnfonts.com/css/spongebob-font-condensed');	</style>
+	<link rel="stylesheet" type="text/css" href="css/website.css">
+
 </head>
 <body>
 	<!-- header element -->
 	<header>
-		<img src="img/spongebob.jpeg">
+		<img src="img/spongebob-header.png">
 		<h1>SpongeBob SquarePants</h1>
 	</header>
 
@@ -18,7 +21,7 @@
 		<h2>About SpongeBob</h2>
 		<p> SpongeBob SquarePants lives in a pineapple under the sea in the town of Bikini Bottom. SpongeBob is an optimistic and enthusiastic sea sponge who works as a fry cook at the Krusty Krab. He loves jellyfishing, blowing bubbles, and hanging out with his best friend, Patrick Star.</p>
 		<img src="img/spongebob-friends.jpeg">
-		<p>SpongeBob and his friends</p>
+		<p class="caption">SpongeBob and his friends</p>
 
 		<!-- Characteristics -->
 		<h2>Characteristics</h2>
@@ -37,13 +40,14 @@
 			<li><a target= "_blank" href="https://spongebob.fandom.com/wiki/Sandy_Cheeks">Sandy Cheeks</li>
 			<li><a target= "_blank" href="https://spongebob.fandom.com/wiki/Squidward_Tentacles">Squidward Tentacles</li>
 			<li><a target= "_blank" href="https://en.wikipedia.org/wiki/Mr._Krabs">Mr. Krabs</li>
-			<li><a target= "_blank" href="https://simple.wikipedia.org/wiki/Gary_the_Snail">Gary the Snail</li>
+			<li><a target= "_blank" href="https://simple.wikipedia.org/wiki/Gary_the_Snail">Gary the Snail </a></li>
 		</ul>
+
 	</main>
 
 	<!-- Footer elements -->
 	<footer>
-		<p>This site was created during a <a href="https://taptapkaboom.com">Tap Tap Kaboom</a> class. &copy; 2024 SpongeBob SquarePants. All rights reserved. This is a fan-made website.</p>
+		<p>This site was created during a <a target= "_blank" href="https://taptapkaboom.com"> Tap Tap Kaboom class.</a> &copy; 2024 SpongeBob SquarePants. All rights reserved. This is a fan-made website.</p>
 	</footer>
 
 </body>
